fixed index page spacing

--- a/styles/ProjectIndex.module.css
+++ b/styles/ProjectIndex.module.css
@@ -89,7 +89,7 @@
 
 @media screen and (max-width: 480px) {
     .container{
-        padding-top: 1%;
+        margin-top: -15px;
     }
 
     .wrapper{
@@ -102,13 +102,11 @@
 
     .title{
         margin-top: 0px;
+        font-size: 45px;
     }
 
     .img{
         height: 160px;
     }
 
-    .title{
-        font-size: 40px;
-    }
 }
